# spacy_conll

./: pyproject.toml
spacy_conll/: formatter.py
